[tool.poetry]
name = "broken-links-app"
version = "0.1.0"
description = ""
authors = ["Benzaoui Soufiane"]

# packages = [{include = "broken_links_app"}]
[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.8"
fire = "0.2.1"
[tool.poetry.dev-dependencies]
python = "^3.7"
scrapy = "^1.8"
fire = "0.2.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
